# MLops_Krehova

./: Dockerfile  Makefile  perf.py  pyproject.toml  setup.py
MinMaxScaling/: __init__.py
MinMaxScaling/python/: bindings.cpp
MinMaxScaling/src/: min_max_scaling.cpp  min_max_scaling.h
MinMaxScaling/tests/: test_mms.cpp
